--- a/about_us_new.html
+++ b/about_us_new.html
@@ -452,8 +452,10 @@ button:hover {
     </div>
     <!-- counter wrapper end-->
     <!-- sp choose wrapper Start -->
-    <div class="sp_choose_main_wrapper">
-       
+   <div class="sp_choose_main_wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-12 col-xs-12 col-sm-12 col-lg-offset-2">
                     <div class="sp_choose_heading_main_wrapper pst_bottompadder50">
                         <h2><span>Why Choose Us</span></h2>
                        
