--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ Purchase:
                                     <i class="flaticon-certification-award"></i>
                                 </div>
                                 <h4 class="text-center pst_bottompadder10">Licensed & Protected</a></h4>
-                                <p class="text-center">HyTech Pest Control is Government licensed and insured.Thus we hold a legal Pest Control License.</p>
+                                <p class="text-center">HyTech Pest Control is Government licensed and insured. Thus we hold a legal Pest Control License.</p>
                                </h6>
                             </div>
                         </div>
@@ -604,8 +604,8 @@ Purchase:
                                 <div class="main_ser_hover">
                                     <i class="flaticon-plant"></i>
                                 </div>
-                                <h4 class="text-center pst_bottompadder10">Eco friendly technogies</a></h4>
-                                <p class="text-center">We offer a eco friendly range of Professional Pest Management Services, Quality Products and Equipments through our branches.</p>
+                                <h4 class="text-center pst_bottompadder10">Eco friendly technologies</a></h4>
+                                <p class="text-center">We offer a eco friendly range of Professional Pest Management Services, Quality Products and Equipment's through our branches.</p>
                                 <!--<h6><a href="#">Read More </a></h6>-->
                             </div>
                         </div>
@@ -708,7 +708,7 @@ Purchase:
                                 <i class="flaticon-insect"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10">Cockroach Control</a></h4>
-                            <p class="text-center">Sprays and the most familiar chemicals like boric acid and diatomaceous earth are used alongwith chemical powders to get rid of the coackroaches.</p>
+                            <p class="text-center">Sprays and the most familiar chemicals like boric acid and diatomaceous earth are used along with chemical powders to get rid of the cockroaches.</p>
                            <!-- <h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
@@ -718,7 +718,7 @@ Purchase:
                                 <i class="flaticon-mosquito-1"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10">Plant Insect Control</a></h4>
-                            <p class="text-center"> Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take atmost care as swarm attacks take place during this operation.</p>
+                            <p class="text-center"> Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take at most care as swarm attacks take place during this operation.</p>
                            <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
@@ -748,7 +748,7 @@ Purchase:
                                 <i class="flaticon-mosquito-insect-side-view"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10">Mosquito Control</a></h4>
-                            <p class="text-center">To get rid of adult mosquitoes,we spray the foliage of bushes and shrubs, lower limbs of shade trees, tall grass, and shaded areas with a residual insecticide.</p>
+                            <p class="text-center">To get rid of adult mosquitoes, we spray the foliage of bushes and shrubs, lower limbs of shade trees, tall grass, and shaded areas with a residual insecticide.</p>
                            <!-- <h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
@@ -1608,7 +1608,7 @@ Purchase:
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
