--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ Purchase:
                     </div>
                 </div>
                 <div class="sp_feature_cntnt ser_service_icon_centnt">
-                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
+                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12" onclick="window.location = 'coackroach_control.html'; ">
                         <div class="main sp_ser_img_box1">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-insect"></i>
