"Our Services" link
link fixes

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ Purchase:
                            <!-- <h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
+                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12" onclick="window.location = 'plant_insect_control.html'; ">
                         <div class="main sp_ser_img_box2">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mosquito-1"></i>
@@ -732,7 +732,7 @@ Purchase:
                            <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
+                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12" onclick="window.location = 'rodent_removal.html'; ">
                         <div class="main sp_ser_img_box4">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mouse"></i>
@@ -742,7 +742,7 @@ Purchase:
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
+                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12" onclick="window.location = 'mosquito_control.html'; ">
                         <div class="main sp_ser_img_box5">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mosquito-insect-side-view"></i>
@@ -752,7 +752,7 @@ Purchase:
                            <!-- <h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
+                    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12" onclick="window.location = 'bedbug_control.html'; ">
                         <div class="main sp_ser_img_box6">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-bug"></i>
