--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Purchase:
 
 <body>
 	<!-- color picker start -->
-	<div id="style-switcher" style="left: -215px;">
+	<div id="style-switcher">
         <div>
           <h3>Choose Color</h3>
           <ul class="colors">
