--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@ Purchase:
 </head>
 
 <body>
+	<!-- preloader Start -->
+    <div id="preloader">
+        <div id="status">
+            <img src="images\pest_control.gif" id="preloader_image" alt="loader">
+        </div>
+    </div>
 	<!-- color picker start -->
 	<div id="style-switcher" style="left: -215px;">
         <div>
