--- a/about_us_new.html
+++ b/about_us_new.html
@@ -81,7 +81,7 @@ button:hover {
         </div>
     </div>
 	<!-- color picker start -->
-	<div id="style-switcher">
+	<div id="style-switcher" style="left: -215px;">
 	  <div>
 		<h3>Choose Color</h3>
 		<ul class="colors">
@@ -1064,7 +1064,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
