links, spell & color switch

--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@ button:hover {
         </div>
     </div>
 	<!-- color picker start -->
-	<div id="style-switcher">
+	<div id="style-switcher" style="left: -215px;">
 	  <div>
 		<h3>Choose Color</h3>
 		<ul class="colors">
@@ -396,8 +396,8 @@ button:hover {
                                 <div class="main_ser_hover">
                                     <i class="flaticon-plant"></i>
                                 </div>
-                                <h4 class="text-center pst_bottompadder10">Eco friendly technogies</a></h4>
-                                <p class="text-center">We offer a eco friendly range of Professional Pest Management Services, Quality Products and Equipments through our branches.</p>
+                                <h4 class="text-center pst_bottompadder10">Eco friendly technologies</a></h4>
+                                <p class="text-center">We offer a eco friendly range of Professional Pest Management Services, Quality Products and Equipment through our branches.</p>
                                 <!--<h6><a href="#">Read More </a></h6>-->
                             </div>
                         </div>
@@ -419,7 +419,7 @@ button:hover {
                     </div>
                 </div>
                 <div class="sp_feature_cntnt ser_service_icon_centnt service_page_wrapper">
-                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6" onclick="window.location = 'coackroach_control.html'; ">
                         <div class="main sp_ser_img_box1">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-insect"></i>
@@ -429,7 +429,7 @@ button:hover {
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6" onclick="window.location = 'plant_insect_control.html'; ">
                         <div class="main sp_ser_img_box2">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mosquito-1"></i>
@@ -439,7 +439,7 @@ button:hover {
                           <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6" onclick="window.location = 'spider_control.html'; ">
                         <div class="main sp_ser_img_box3">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-butterfly-with-a-heart-on-frontal-wing-on-side-view"></i>
@@ -449,7 +449,7 @@ button:hover {
                            <!-- <h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6" onclick="window.location = 'rodent_removal.html'; ">
                         <div class="main sp_ser_img_box4">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mouse"></i>
@@ -459,7 +459,7 @@ button:hover {
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6" onclick="window.location = 'mosquito_control.html'; ">
                         <div class="main sp_ser_img_box5">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mosquito-insect-side-view"></i>
@@ -469,7 +469,7 @@ button:hover {
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6" onclick="window.location = 'bedbug_control.html'; ">
                         <div class="main sp_ser_img_box6">
                             <div class="rotate rotate_1">
                                 <i class="flaticon-bug"></i>
@@ -865,7 +865,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
