--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -81,7 +81,7 @@ button:hover {
         </div>
     </div>
 	<!-- color picker start -->
-	<div id="style-switcher">
+	<div id="style-switcher" style="left: -215px;">
 	  <div>
 		<h3>Choose Color</h3>
 		<ul class="colors">
@@ -457,7 +457,7 @@ button:hover {
                                 <img src="images\img5.jpg" alt="img" class="img-responsive">
                                 <div class="sp-member-info">
                                     <!--<a href="#">akshay h.</a>-->
-                                    <p>Provision of cleanliness to the houses with atmost care of your furnitures.</p>
+                                    <p>Provision of cleanliness to the houses with utmost care of your furnitures.</p>
                                 </div>
                             </div>
                             <div class="team_txt">
@@ -901,7 +901,7 @@ button:hover {
                                     <img src="images\foter_blog_1.png" class="img-responsive" alt="blog-img1_img">
                                 </div>
                                 <div class="ft_blog_text">
-                                    <h5>Free Sanitization Spray for the frontline warriors</a></h5>
+                                    <h5 style="color:white;">Free Sanitization Spray for the frontline warriors</a></h5>
                                     <div class="ft_blog_date">May 15, 2020</div>
                                 </div>
                             </div>
@@ -931,7 +931,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
