--- a/mosquito_control.html
+++ b/mosquito_control.html
@@ -131,7 +131,7 @@ button:hover {
         </div>
     </div>
 	<!-- color picker start -->
-	<div id="style-switcher">
+	<div id="style-switcher" style="left: -215px;">
 	  <div>
 		<h3>Choose Color</h3>
 		<ul class="colors">
