--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,7 @@ Purchase:
                                    <img src="images\foter_blog_1.png" class="img-responsive" alt="blog-img1_img">
                                 </div>
                                 <div class="ft_blog_text">
-                                    <h5 style="color:white;">Free sanitization spray for the frontline warriors</a></h5>
+                                    <h5><div class="ft_blog_date">Free Sanitization Spray for the frontline warriors</a></div></h5>
                                     <div class="ft_blog_date">May 15, 2020</div>
                                 </div>
                             </div>
