--- a/contact_us.html
+++ b/contact_us.html
@@ -574,7 +574,7 @@ We would be happy to answer your questions.</p>
                                     <img src="images\foter_blog_1.png" class="img-responsive" alt="blog-img1_img">
                                 </div>
                                 <div class="ft_blog_text">
-                                    <h5>Free Sanitization Spray for the frontline warriors</a></h5>
+                                    <h5><div class="ft_blog_date">Free Sanitization Spray for the frontline warriors</a></div></h5>
                                     <div class="ft_blog_date">May 15, 2020</div>
                                 </div>
                             </div>
