--- a/appt_new.html
+++ b/appt_new.html
@@ -392,7 +392,7 @@ button:hover {
             														<option>Lizard Control</option>
             														<option>Bedbug Control</option>
             														<option>Mosquito Control</option>
-            														<option>Coackroach Control</option>
+            														<option>cockroach Control</option>
             														<option>Snake Control</option>
             														<option>Termite Control</option>
             														<option>Spider Control</option>
@@ -645,7 +645,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
