--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ Purchase:
                                 <i class="flaticon-mosquito-1"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10">Plant Insect Control</a></h4>
-                            <p class="text-center"> Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take at most care as swarm attacks take place during this operation.</p>
+                            <p class="text-center"> Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take utmost care as swarm attacks take place during this operation.</p>
                            <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
