--- a/lizard_control.html
+++ b/lizard_control.html
@@ -367,7 +367,7 @@ button:hover {
                         <p class="start_journey">Latin Name</p>
                         <p class="p-para">Lacertilia</p>
                         <p class="start_journey">Interesting Fact About Lizards</p>
-                        <p class="p-para">Lizards tend to be more active during the night as lizards spend the day basking in the hot sun in order to warm themselves up. Lizards are therefore able to recharge their batteries during the day and can hunt with success at night. Due to their extremely tuned eyesight, many species of lizard have highly acute color vision. When communicating most lizards rely heavily on body language as lizards use specific postures, gestures and movements to define their territory,resolve any disputes, and entice mates.</p>
+                        <p class="p-para">Lizards tend to be more active during the night as lizards spend the day basking in the hot sun in order to warm themselves up. Lizards are therefore able to recharge their batteries during the day and can hunt with success at night. Due to their extremely tuned eyesight, many species of lizard have highly acute color vision. When communicating most lizards rely heavily on body language as lizards use specific postures, gestures and movements to define their territory, resolve any disputes, and entice mates.</p>
                         <p class="start_journey">Why do they need to be treated?</p>
                         <p class="p-para">Even if they’re basically pest control, as they eat various insects and spiders, lizards can carry certain diseases, including salmonella, so they should really stay outside in the garden.</p>
                         <p class="start_journey">Treatment:</p>
@@ -577,7 +577,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
