--- a/rodent_removal.html
+++ b/rodent_removal.html
@@ -376,14 +376,14 @@ button:hover {
                         <p class="start_journey">Interesting Fact About Rodents</p>
                         <p class="p-para">Rodents are warm blooded mammals, that like humans, can be found throughout the world. They have oversized front teeth, which are adapted for chewing. Rodents chew on a variety of items available to them and cause great damage in and around homes.</p>
                         <p class="start_journey">Why do they need to be treated?</p>
-                        <p class="p-para">In addition to being tough to control, rodents may carry diseases and taint food with waste, fur and saliva. In fact mice can contaminateabout 10 times the amount of food they eat. They can spread plague and diseases like lymphocytic choriomeningitis virus. This illness mostly affects those with weakened immune systems and may result in headaches, fever and meningitis. It can also cause complications during pregnancy. They are equipped with large teeth and are capable of transmitting a variety of bacteria, viruses and diseases through their saliva, faeces and urine.</p>
+                        <p class="p-para">In addition to being tough to control, rodents may carry diseases and taint food with waste, fur and saliva. In fact mice can contaminate about 10 times the amount of food they eat. They can spread plague and diseases like lymphocytic choriomeningitis virus. This illness mostly affects those with weakened immune systems and may result in headaches, fever and meningitis. It can also cause complications during pregnancy. They are equipped with large teeth and are capable of transmitting a variety of bacteria, viruses and diseases through their saliva, faeces and urine.</p>
                         <p class="start_journey">Treatment:</p>
                         <h3><br>1. Cleanliness is the key to control</h3>
                         <p>Thoroughly inspect the area to determine the extent of infestation and the type of rodent.</p>
                         <p>Control starts with good sanitation. Eliminate access to food and remove rubbish or clutter which rodents use as breeding or hiding places. Rodent-proofing of the premises by sealing up areas where they can enter the building helps to a great extent.</p>
                         <p>Traps can also be used for smaller populations but are less effective for large populations.</p>
                         <h3><br>2. Achieve efficient rodent control</h3>
-                        <p>Rodenticide baits placed strategically where rats roam and seek food offer efficient control. Today’s rodenticides are anti-coagulants, causing death by inhibiting blood coagulation. This process takes several days.</p>
+                        <p>Rodenticide baits placed strategically where rats roam and seek food offer efficient control. Today’s rodenticide are anti-coagulants, causing death by inhibiting blood coagulation. This process takes several days.</p>
                         <p>Anti-coagulants treatments fall into two categories:<br>1) Single dose   <br>2)Multi-dose</p>
                         <p>For single dose, rodents consume a lethal dose in a single feed, whereas for multi-dose, rodents must feed on the baits for several days before accumulating a lethal dose.</p>
                         <p class="p-para">The advantage of multi-dose is a significantly reduced risk of secondary poisoning of non-target species and restrict the ability of rodents to associate the bait with hazard.</p>
@@ -592,7 +592,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
