--- a/services.html
+++ b/services.html
@@ -425,7 +425,7 @@ button:hover {
                                 <i class="flaticon-insect"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10"><a href="coackroach_control.html">Cockroach Control</a></h4>
-                            <p class="text-center">Sprays and the most familiar chemicals like boric acid and diatomaceous earth are used alongwith chemical powders to get rid of the coackroaches.</p>
+                            <p class="text-center">Sprays and the most familiar chemicals like boric acid and diatomaceous earth are used along with chemical powders to get rid of the Cockroaches.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
@@ -435,7 +435,7 @@ button:hover {
                                 <i class="flaticon-mosquito-1"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10"><a href="plant_insect_control.html">Plant Insect Control</a></h4>
-                            <p class="text-center">Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take atmost care as swarm attacks take place during this operation.</p>
+                            <p class="text-center">Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take utmost care as swarm attacks take place during this operation.</p>
                           <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
@@ -465,7 +465,7 @@ button:hover {
                                 <i class="flaticon-mosquito-insect-side-view"></i>
                             </div>
                             <h4 class="text-center pst_bottompadder10"><a href="mosquito_control.html">Mosquito Control</a></h4>
-                            <p class="text-center">To get rid of adult mosquitoes,we spray the foliage of bushes and shrubs, lower limbs of shade trees, tall grass, and shaded areas with a residual insecticide.</p>
+                            <p class="text-center">To get rid of adult mosquitoes, we spray the foliage of bushes and shrubs, lower limbs of shade trees, tall grass, and shaded areas with a residual insecticide.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
                     </div>
