--- a/plant_insect_control.html
+++ b/plant_insect_control.html
@@ -367,9 +367,9 @@ button:hover {
                         <p class="start_journey">Latin Name</p>
                         <p class="p-para">Miridae</p>
                         <p class="start_journey">Interesting Fact About Plant Insects</p>
-                        <p class="p-para">Houseplant pests can multiply very quickly, so you have to be diligent about checking for symptoms. These inscets can be just as voracious as their outer counterparts but have the added benefit of developing and reproducing in near ideal conditions.</p>
+                        <p class="p-para">Houseplant pests can multiply very quickly, so you have to be diligent about checking for symptoms. These insects can be just as voracious as their outer counterparts but have the added benefit of developing and reproducing in near ideal conditions.</p>
                         <p class="start_journey">Why do they need to be treated?</p>
-                        <p class="p-para">If you notice a plant that suddenly begins to look ill, take a closer look chancesare an insect is responsibe. Infestations can be very severe and plants that have had more than half of their leaves damaged are probably not worth saving. For this reason, it is important to identify and control indoor plant pests as quickly as possible.</p>
+                        <p class="p-para">If you notice a plant that suddenly begins to look ill, take a closer look chances are an insect is responsible. Infestations can be very severe and plants that have had more than half of their leaves damaged are probably not worth saving. For this reason, it is important to identify and control indoor plant pests as quickly as possible.</p>
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Space treatment is fogging or misting to disperse a liquid insecticide into the atmosphere within a building without evacuation or airtight sealing, allowing most work within the building to continue, at the cost of reduced penetration.</p>
                         <br>
@@ -577,7 +577,7 @@ button:hover {
                                 </li>
                                 <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Cockroach Control</a>
                                 </li>
                                 <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
