--- a/mosquito_control.html
+++ b/mosquito_control.html
@@ -573,7 +573,7 @@ button:hover {
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                       <p>Copyright 2020 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="https://kodeitsolutions.com/">Kode It Solution</a></p>
+                       <p>Copyright 2020 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="https://kodeitsolutions.com/">KODE IT SOLUTIONS</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
